<?xml version="1.0"?>
<package>
  <name>wifi_im</name>
  <version>0.0.1</version>
  <description>The wifi_im package</description>

  <maintainer email="christianb314@gmail.com">Christian Blum</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nav_msgs</run_depend>
</package>
